maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:37: error: not enough arguments for method check: (x: Int, y: Int, sol: Int)Unit.
Unspecified value parameter sol.
    if (check(x+1,y)==true){
             ^ShortestPathMaze:43: error: not enough arguments for method check: (x: Int, y: Int, sol: Int)Unit.
Unspecified value parameter sol.
    if (check(x,y+1)==true){
             ^ShortestPathMaze:52: error: missing arguments for method aMurNord in class ShortestPathMaze;
follow this method with `_' if you want to treat it as a partially applied function
  if (!aMurNord && y!=0){
       ^ShortestPathMaze:53: error: not found: value abs
    if (sol>=abs(sol-getIndication(x,y-1))>=2){
             ^ShortestPathMaze:57: error: missing arguments for method aMurOuest in class ShortestPathMaze;
follow this method with `_' if you want to treat it as a partially applied function
  if (!aMurOuest && x!=0){
       ^ShortestPathMaze:58: error: not found: value abs
    if (sol>=abs(sol-getIndication(x-1,y))>=2){
             ^ShortestPathMaze:63: error: not found: value abs
    if (sol>=abs(sol-getIndication(x+1,y))>=2){
             ^ShortestPathMaze:68: error: not found: value abs
    if (sol>=abs(sol-getIndication(x,y-1))>=2){
             ^ShortestPathMaze:72: warning: enclosing method check has result type Unit: return value discarded
 return etat
 ^